dist/paperless/Namespace.paperless.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/name: paperless
  name: paperless
  namespace: paperless
