dist/paperless/Deployment.ftpserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ftpserver
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: ftpserver
  name: ftpserver
  namespace: paperless
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: ftpserver-ftpserver-deployment-c81a5fa1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ftpserver
        app.kubernetes.io/name: ftpserver
        cdk8s.io/metadata.addr: ftpserver-ftpserver-deployment-c81a5fa1
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: FTP_USER_NAME
              value: scanner
            - name: FTP_USER_PASS
              valueFrom:
                secretKeyRef:
                  key: FTP_USER_PASS
                  name: paperless-ftp-credentials
            - name: FTP_USER_UID
              value: "1000"
            - name: FTP_USER_GID
              value: "1000"
            - name: FTP_USER_HOME
              value: /home/scanner
            - name: PUBLICHOST
              value: 10.0.10.84
          image: stilliard/pure-ftpd
          imagePullPolicy: Always
          name: ftpserver
          ports:
            - containerPort: 21
              name: ftp
            - containerPort: 30000
            - containerPort: 30001
            - containerPort: 30002
            - containerPort: 30003
            - containerPort: 30004
            - containerPort: 30005
            - containerPort: 30006
            - containerPort: 30007
            - containerPort: 30008
            - containerPort: 30009
          resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              cpu: 5m
              memory: 8Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /home/scanner
              name: pvc-ftp
      dnsPolicy: ClusterFirst
      hostNetwork: false
      nodeSelector:
        kubernetes.io/arch: amd64
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-ftp
          persistentVolumeClaim:
            claimName: ftp
            readOnly: false
