dist/paperless/Deployment.paperless.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app: paperless
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: paperless
    component: web
  name: paperless
  namespace: paperless
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: paperless-web-paperless-web-deployment-c8ac15e0
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: paperless
        app.kubernetes.io/name: paperless
        cdk8s.io/metadata.addr: paperless-web-paperless-web-deployment-c8ac15e0
        component: web
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: PAPERLESS_AI_LLM_API_KEY
              valueFrom:
                secretKeyRef:
                  key: CUSTOM_API_KEY
                  name: paperless-ai-secrets
          image: ghcr.io/paperless-ngx/paperless-ngx:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 10
          name: paperless
          ports:
            - containerPort: 8000
              name: http
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 10
          resources:
            limits:
              memory: 2560Mi
            requests:
              cpu: 250m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /data
              name: pvc-data
            - mountPath: /usr/src/paperless/consume
              name: pvc-ftp
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-data
          persistentVolumeClaim:
            claimName: data
            readOnly: false
        - name: pvc-ftp
          persistentVolumeClaim:
            claimName: ftp
            readOnly: false
