dist/paperless/Deployment.tika.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: paperless
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: tika
    component: tika
  name: tika
  namespace: paperless
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: tika-tika-deployment-c88b096a
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: paperless
        app.kubernetes.io/name: tika
        cdk8s.io/metadata.addr: tika-tika-deployment-c88b096a
        component: tika
    spec:
      automountServiceAccountToken: false
      containers:
        - image: docker.io/apache/tika:latest
          imagePullPolicy: Always
          name: tika
          ports:
            - containerPort: 9998
              name: web
          resources:
            limits:
              cpu: 200m
              memory: 384Mi
            requests:
              cpu: 50m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
