dist/paperless/Service.gotenberg.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: paperless
    component: gotenberg
  name: gotenberg
  namespace: paperless
spec:
  externalIPs: []
  ports:
    - name: web
      port: 3000
      targetPort: 3000
  selector:
    cdk8s.io/metadata.addr: gotenberg-gotenberg-deployment-c8b9f228
  type: ClusterIP
