dist/paperless/Service.paperless-ai.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: paperless-ai
  name: paperless-ai
  namespace: paperless
spec:
  externalIPs: []
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    cdk8s.io/metadata.addr: paperless-ai-paperless-ai-deployment-c88aa187
  type: ClusterIP
