dist/paperless/Service.paperless-valkey-master.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: master
    app.kubernetes.io/instance: paperless
    app.kubernetes.io/name: valkey
  name: paperless-valkey-master
  namespace: paperless
spec:
  ports:
    - name: tcp-valkey
      port: 6379
      targetPort: valkey
  selector:
    app.kubernetes.io/component: master
    app.kubernetes.io/instance: paperless
    app.kubernetes.io/name: valkey
  type: ClusterIP
