dist/paperless/Service.paperless.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: paperless
    component: web
  name: paperless
  namespace: paperless
spec:
  externalIPs: []
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  selector:
    cdk8s.io/metadata.addr: paperless-web-paperless-web-deployment-c8ac15e0
  type: ClusterIP
