dist/paperless/Ingress.paperless-ai.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app: paperless-ai
  name: paperless-ai
  namespace: paperless
spec:
  rules:
    - host: paperless-ai.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: paperless-ai
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - paperless-ai.cmdcentral.xyz
      secretName: paperless-ai-tls
