dist/paperless/Ingress.paperless.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app: paperless
    component: web
  name: paperless
  namespace: paperless
spec:
  rules:
    - host: paperless.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: paperless
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - paperless.cmdcentral.xyz
      secretName: paperless-tls
