dist/paperless/IngressRoute.paperless-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ingress
  namespace: paperless
spec:
  routes:
    - kind: Rule
      match: Host(`paperless.cmdcentral.xyz`)
      middlewares:
        - name: authentik
          namespace: authentik
      priority: 10
      services:
        - kind: Service
          name: paperless-web
          port: 8000
    - kind: Rule
      match: Host(`paperless.cmdcentral.xyz`) && PathPrefix(`/outpost.goauthentik.io/`)
      priority: 15
      services:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          port: 9000
  tls:
    secretName: paperless-tls
